--- a/client/src/components/button/button.css
+++ b/client/src/components/button/button.css
@@ -4,12 +4,12 @@
 }
 
 .button-button {
-  color: var(--dl-color-gray-white);
-  font-size: 24px;
+  color: var(--color-gray-white);
+  font-size: var(--font-size-medium);
   transition: 0.3s;
   border-width: 0px;
-  border-radius: var(--dl-radius-radius-radius8);
-  background-color: var(--dl-color-primary-500);
+  border-radius: var(--radius-radius-radius8);
+  background-color: var(--color-primary-500);
 }
 
 .button-button:hover {
