--- a/client/src/components/form/form.css
+++ b/client/src/components/form/form.css
@@ -1,106 +1,90 @@
-.streamer-submit-form-container {
-  gap: var(--dl-space-space-unit);
+.input {
+  font-size: var(--font-size-medium);
+  font-weight: var(--font-weight-xsmall);
+  border-color: rgba(136, 0, 240, 0.2);
+  border-width: var(--border-width-small);
+  border-radius: var(--radius-radius-radius8);
+  width: 100%;
+  margin-top: var(--space-space-unit);
+  margin-bottom: var(--space-space-unit);
+  padding: var(--space-space-half-one-rem);
+}
+
+.submit-form-container {
+  gap: var(--space-space-unit);
   width: 100%;
   height: 100%;
   display: flex;
-  padding: var(--dl-space-space-oneandhalfunits);
+  padding: var(--space-space-oneandhalfunits);
   position: relative;
-  max-width: var(--dl-size-size-maxwidth);
+  max-width: var(--size-width-max);
   min-height: auto;
   align-items: center;
   flex-direction: column;
-  background-color: var(--dl-color-gray-white);
+  background-color: var(--color-gray-white);
 }
-.streamer-submit-form-text {
-  font-size: 3rem;
+
+.submit-form-heading {
+  font-size: var(--font-size-xlarge);
   text-align: center;
 }
-.streamer-submit-form-container1 {
+
+.submit-form {
   width: 100%;
   display: grid;
-  grid-gap: var(--dl-space-space-unit);
+  grid-gap: var(--space-space-unit);
   grid-template-columns: 1fr 1fr;
 }
-.streamer-submit-form-container2 {
+
+.submit-form-info {
   width: 100%;
   display: flex;
-  padding: var(--dl-space-space-halfunit);
+  padding: var(--space-space-halfunit);
   align-items: flex-start;
   flex-direction: column;
   justify-content: flex-start;
 }
-.streamer-submit-form-text1 {
-  font-size: 24px;
+
+.submit-form-text {
+  font-size: var(--font-size-medium);
 }
-.streamer-submit-form-select {
-  width: 100%;
-  height: var(--dl-size-size-small);
-  font-size: 24px;
-  margin-top: var(--dl-space-space-unit);
-  padding-top: 0.5rem;
-  border-color: rgba(136, 0, 240, 0.2);
-  border-width: 1px;
-  padding-left: 1rem;
-  border-radius: var(--dl-radius-radius-radius8);
-  margin-bottom: var(--dl-space-space-unit);
-  padding-right: 1rem;
-  padding-bottom: 0.5rem;
+
+.submit-form-input-description {
+  white-space: pre-wrap;
+  height: var(--size-size-xxlarge);
+  resize: none;
 }
-.streamer-submit-form-text2 {
-  width: 100%;
-  height: 100%;
+
+.submit-form-select-platform {
+  height: var(--size-size-small);
 }
-.streamer-submit-form-container3 {
-  width: 100%;
-  display: flex;
-  padding: var(--dl-space-space-halfunit);
-  align-items: flex-start;
-  flex-direction: column;
-  justify-content: flex-start;
+
+.submit-form-input-name {
+  height: var(--size-size-small);
 }
-.streamer-submit-form-text3 {
-  font-size: 24px;
+
+.submit-form-input-photo {
+  height: var(--size-size-small);
 }
-.streamer-submit-form-input-name {
-  width: 100%;
-  height: var(--dl-size-size-small);
-  font-size: 24px;
-  max-width: auto;
-  min-width: auto;
-  margin-top: var(--dl-space-space-unit);
-  border-color: rgba(136, 0, 240, 0.2);
-  border-radius: var(--dl-radius-radius-radius8);
-  margin-bottom: var(--dl-space-space-unit);
-}
-.streamer-submit-form-text4 {
-  font-size: 24px;
-}
-.streamer-submit-form-input-photo {
-  width: 100%;
-  height: var(--dl-size-size-small);
-  font-size: 24px;
-  max-width: auto;
-  min-width: auto;
-  margin-top: var(--dl-space-space-unit);
-  border-color: rgba(136, 0, 240, 0.2);
-  border-radius: var(--dl-radius-radius-radius8);
-  margin-bottom: var(--dl-space-space-unit);
-}
-.streamer-submit-form-root-class-name {
+
+.submit-form-root-class-name {
   align-self: center;
 }
+
 @media(max-width: 991px) {
-  .streamer-submit-form-container1 {
+  .submit-form {
     grid-template-columns: 1fr 1fr;
   }
 }
+
 @media(max-width: 767px) {
-  .streamer-submit-form-container1 {
+  .submit-form {
     grid-template-columns: 1fr;
   }
 }
+
 @media(max-width: 479px) {
-  .streamer-submit-form-container1 {
+  .submit-form {
     grid-template-columns: 1fr;
   }
 }
