--- a/client/src/components/list/list.css
+++ b/client/src/components/list/list.css
@@ -1,21 +1,15 @@
 .streamers-list-container {
   width: 100%;
   height: auto;
+  max-height: var(--size-size-maxwidth);
   display: flex;
-  padding: var(--dl-space-space-halfunit);
+  padding: var(--space-space-halfunit);
   position: relative;
-  max-width: var(--dl-size-size-maxwidth);
+  max-width: var(--size-size-maxwidth);
   align-items: flex-start;
   flex-direction: column;
-  background-color: var(--dl-color-primary-500);
-}
-.streamers-list-container1 {
-  width: 100%;
-  display: flex;
-  max-height: var(--dl-size-size-maxwidth);
+  background-color: var(--color-primary-500);
   overflow-x: hidden;
   overflow-y: auto;
-  align-items: flex-start;
-  flex-direction: column;
 }
 
