--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,68 +1,69 @@
 :root {
-  --dl-color-gray-500: #595959;
-  --dl-color-gray-700: #999999;
-  --dl-color-gray-900: #D9D9D9;
-  --dl-size-size-large: 144px;
-  --dl-size-size-small: 48px;
-  --dl-color-danger-300: #A22020;
-  --dl-color-danger-500: #BF2626;
-  --dl-color-danger-700: #E14747;
-  --dl-color-gray-black: #000000;
-  --dl-color-gray-white: #FFFFFF;
-  --dl-size-size-medium: 96px;
-  --dl-size-size-xlarge: 192px;
-  --dl-size-size-xsmall: 16px;
-  --dl-space-space-unit: 16px;
-  --dl-color-primary-100: #d56ed6ff;
-  --dl-color-primary-300: #8800f0ff;
-  --dl-color-primary-500: #5482f3ff;
-  --dl-color-primary-700: #85DCFF;
-  /* --dl-color-success-300: #199033;
-  --dl-color-success-500: #32A94C;
-  --dl-color-success-700: #4CC366; */
-  --dl-size-size-xxlarge: 288px;
-  --dl-size-size-maxwidth: 1170px;
-  --dl-radius-radius-round: 50%;
-  --dl-space-space-halfunit: 8px;
-  --dl-space-space-sixunits: 96px;
-  --dl-space-space-twounits: 32px;
-  --dl-radius-radius-radius2: 2px;
-  --dl-radius-radius-radius4: 4px;
-  --dl-radius-radius-radius8: 8px;
-  --dl-space-space-fiveunits: 80px;
-  --dl-space-space-fourunits: 64px;
-  --dl-space-space-threeunits: 48px;
-  --dl-space-space-oneandhalfunits: 24px;
+  --color-gray-900: #D9D9D9;
+  --color-gray-black: #000000;
+  --color-gray-white: #FFFFFF;
+  --color-primary-100: #d56ed6ff;
+  --color-primary-500: #5482f3ff;
+
+  --size-size-xsmall: 16px;
+  --size-size-small: 48px;
+  --size-size-medium: 96px;
+  --size-size-large: 144px;
+  --size-size-xxlarge: 256px;
+  --size-width-small: 479px;
+  --size-width-max: 1170px;
+
+  --font-family-main: Inter, Arial, sans-serif;
+  --font-size-small: 18px;
+  --font-size-medium: 24px;
+  --font-size-large: 32px;
+  --font-size-xlarge: 48px;
+  --font-weight-xsmall: 300;
+  --font-weight-small: 400;
+  --font-weight-medium: 600;
+  --font-weight-large: 700;
+
+  --space-space-halfunit: 8px;
+  --space-space-unit: 16px;
+  --space-space-oneandhalfunits: 24px;
+  --space-space-twounits: 32px;
+  --space-space-threeunits: 48px;
+  --space-space-half-one-rem: 0.5rem 1rem;
+
+  --border-width-small: 1px;
+  --radius-radius-radius4: 4px;
+  --radius-radius-radius8: 8px;
+  --radius-radius-round: 50%;
 }
 
 .button {
-  color: var(--dl-color-gray-black);
+  color: var(--color-gray-black);
   display: inline-block;
-  padding: 0.5rem 1rem;
-  border-color: var(--dl-color-gray-black);
-  border-width: 1px;
-  border-radius: 4px;
-  background-color: var(--dl-color-gray-white);
+  padding: var(--space-space-half-one-rem);
+  border-color: var(--color-gray-black);
+  border-width: var(--border-width-small);
+  border-radius: var(--radius-radius-radius4);
+  background-color: var(--color-gray-white);
 }
 
 .input {
-  color: var(--dl-color-gray-black);
+  color: var(--color-gray-black);
   cursor: auto;
-  padding: 0.5rem 1rem;
-  border-color: var(--dl-color-gray-black);
-  border-width: 1px;
-  border-radius: 4px;
-  background-color: var(--dl-color-gray-white);
+  padding: var(--space-space-half-one-rem);
+  border-color: var(--color-gray-black);
+  border-width: var(--border-width-small);
+  border-radius: var(--radius-radius-radius4);
+  background-color: var(--color-gray-white);
 }
 
 .textarea {
-  color: var(--dl-color-gray-black);
+  color: var(--color-gray-black);
   cursor: auto;
-  padding: 0.5rem;
-  border-color: var(--dl-color-gray-black);
-  border-width: 1px;
-  border-radius: 4px;
-  background-color: var(--dl-color-gray-white);
+  padding: var(--space-space-half-one-rem);
+  border-color: var(--color-gray-black);
+  border-width: var(--border-width-small);
+  border-radius: var(--radius-radius-radius4);
+  background-color: var(--color-gray-white);
 }
 
 .list {
@@ -78,24 +79,31 @@
   display: list-item;
 }
 
-.teleport-show {
-  display: flex !important;
-  transform: none !important;
+.loading-container {
+  width: 100%;
+  height: auto;
+  position: relative;
+  max-width: var(--size-width-max);
+  color: white;
+  background-color: black;
+  padding: var(--space-space-oneandhalfunits);
+  max-width: var(--size-width-max);
+  font-size: var(--font-size-medium);
 }
 
 .Content {
-  font-size: 16px;
-  font-family: Inter;
-  font-weight: 400;
+  font-size: var(--font-size-small);
+  font-family: var(--font-family-main);
+  font-weight: var(--font-weight-small);
   line-height: 1.15;
   text-transform: none;
   text-decoration: none;
 }
 
 .Heading {
-  font-size: 32px;
-  font-family: Inter;
-  font-weight: 700;
+  font-size: var(--font-size-large);
+  font-family: var(--font-family-main);
+  font-weight: var(--font-weight-large);
   line-height: 1.15;
   text-transform: none;
   text-decoration: none;
