--- a/client/src/components/votes/votes.css
+++ b/client/src/components/votes/votes.css
@@ -15,7 +15,7 @@
   justify-content: space-between;
 }
 .votes-rate-text {
-  font-size: var(--font-size-medium);
+  font-size: var(--font-size-small);
   font-style: normal;
   font-weight: var(--font-weight-xsmall);
 }
