--- a/client/src/components/formStream/form.css
+++ b/client/src/components/formStream/form.css
@@ -1,5 +1,5 @@
 .input {
-  font-size: var(--font-size-medium);
+  font-size: var(--font-size-small);
   font-weight: var(--font-weight-xsmall);
   border-color: rgba(136, 0, 240, 0.2);
   border-width: var(--border-width-small);
@@ -25,7 +25,7 @@
 }
 
 .submit-form-heading {
-  font-size: var(--font-size-xlarge);
+  font-size: var(--font-size-medium);
   text-align: center;
 }
 
@@ -46,10 +46,11 @@
 }
 
 .submit-form-text {
-  font-size: var(--font-size-medium);
+  font-size: var(--font-size-small);
 }
 
 .submit-form-input-description {
+  font-size: var(--font-size-small);
   white-space: pre-wrap;
   height: var(--size-size-xxlarge);
   resize: none;
